# Deep-Code

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: COMMIT_TEMPLATE.txt  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
configs/: config.yaml
deep-code-output/: app.js  index.html  index.html.bak  script.js  script.js.bak  style.css  style.css.bak
deep_code/: __init__.py
deep_code/cli/: __init__.py  __main__.py  entry.py  main.py
deep_code/core/: config.py
deep_code/models/: __init__.py  groq_client.py
deep_code/operations/: code_validator.py  file_ops.py
deep_code/plugins/: __init__.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
hello-world/: index.html
hello-world-html-page/: index.html
javascript-calculator/: app.js  index.html
scripts/: init_dirs.py
src/cli/: entry.py  main.py
src/core/: __init__.py  config.py
src/models/: groq_client.py
src/operations/: __init__.py  code_validator.py
src/utils/: __init__.py
tests/: .gitkeep
to-do-list/: app.js  index.html  script.js  style.css  to_do_list_file2.javascript  to_do_list_file3.css
todo-list/: app.js  index.html  todo_list_file3.css
